# AEQUITAS_MVP

./: README.md  WEEK_1_EXECUTION_CHECKLIST.md  aequitas_feature_matrix.md  aequitas_file_structure.md  aequitas_implementation_roadmap.md  aequitas_tech_architecture.md  package-lock.json
backend/: .env.example  Dockerfile  MANIFEST.in  Makefile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements.txt  ruff.toml  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  middleware.py  version.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  brokers.py  crisis_simulator.py  forecasts.py  gamification.py  health.py  market.py  organizations.py  positions.py  users.py
backend/app/auth/: __init__.py  auth0.py  jwt.py  permissions.py
backend/app/core/: __init__.py  constants.py  enums.py  logging.py  metrics.py  security.py
backend/app/database/: __init__.py  base.py  engine.py  redis.py  session.py
backend/app/ml/: __init__.py
backend/app/ml/forecasting/: __init__.py  engine.py  models.py
backend/app/models/: __init__.py  api_usage.py  audit_log.py  base.py  broker_connection.py  forecast.py  forecast_actual.py  market_indicator.py  organization.py  position.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  broker.py  forecast.py  market.py  organization.py  position.py  user.py
backend/app/services/: __init__.py  auth_service.py  forecast_service.py  upload_service.py
backend/app/tasks/: __init__.py  celery_app.py
backend/tests/: conftest.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: build.ts  deploy.ts  generate-components.ts  type-check.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Analytics/: AccuracyDashboard.tsx  ExportData.tsx  RegimeBreakdown.tsx  index.ts
frontend/src/components/Auth/: LoginForm.tsx  ProtectedRoute.tsx  SignupForm.tsx  index.ts
frontend/src/components/Dashboard/: AccuracyMetrics.tsx  DashboardHome.tsx  ForecastCard.tsx  RegimeIndicator.tsx  index.ts
frontend/src/components/Forecasts/: ForecastDetails.tsx  ForecastHistory.tsx  RealtimeForecasts.tsx  index.ts
frontend/src/components/Marketing/: FAQ.tsx  Features.tsx  Hero.tsx  Pricing.tsx  Testimonials.tsx  index.ts
frontend/src/components/Settings/: BillingSettings.tsx  BrokerConnections.tsx  OrganizationSettings.tsx  UserProfile.tsx  index.ts
frontend/src/components/Upload/: DataPreview.tsx  FileUpload.tsx  UploadHistory.tsx  index.ts
frontend/src/components/gamification/: AchievementBadge.tsx  PrestigeMeter.tsx  RankBadge.tsx  XPProgressBar.tsx  index.ts
frontend/src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx  MobileBottomNav.tsx  ParanoiaModeLayout.tsx  Sidebar.tsx  SidebarWingNav.tsx  TopNav.tsx  index.ts
frontend/src/components/shared/: CommandPalette.tsx  GlassPanel.tsx  LoadingScreen.tsx  ManhattanSkyline.tsx  MetricCard.tsx  PersonaAvatar.tsx  index.ts
frontend/src/components/ui/: GlassCard.tsx  RegimeBadge.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  data-table.tsx  index.ts  input.tsx  progress.tsx  toast.tsx
frontend/src/components/wings/: index.ts
frontend/src/components/wings/bullpen/: BillableHourTracker.tsx  ContextualHelpTooltips.tsx  DocumentUnbindingAnimation.tsx  EvidenceLogDataTable.tsx  HardLoveFailureToast.tsx  LegalParalegalChat.tsx  MicroCelebrations.tsx  PositionCSVPreviewUpload.tsx  TaskKanbanFixolaw.tsx  TemplateLibraryBrowser.tsx
frontend/src/components/wings/donnas-desk/: CalendarIntegration.tsx  DelegationManager.tsx  DonnaConversationPanel.tsx  NotificationCenter.tsx  ProactiveInsightsPanel.tsx  SmartTaskQueue.tsx  index.ts
frontend/src/components/wings/harveys-office/: DecisionQueue.tsx  ExecutiveStrategyBoard.tsx  ExecutiveSummaryCharts.tsx  HarveyConsultation.tsx  MemoArchive.tsx  TeamPerformanceOverview.tsx  index.ts
frontend/src/components/wings/lobby/: BiometricGatekeeper.tsx  DailyStandupNotification.tsx  InstitutionalOrgChart.tsx  IntentRecognitionModal.tsx  InteractiveSitemapBuilder.tsx  ProgressiveKYC.tsx  RBACMatrix.tsx  ReceptionDeskDashboard.tsx  RegimeDetectionBadge.tsx
frontend/src/components/wings/situation-room/: CrisisAlertOverlay.tsx  index.ts  (+10 more)
frontend/src/config/: design-tokens.ts  features.ts  gamification.ts  index.ts  narrative.ts  wings.ts
frontend/src/hooks/: index.ts  useAuth.ts  useForecast.ts  useSoundEffects.ts  useUpload.ts  useWebSocket.ts
frontend/src/hooks/ui/: useDocumentTitle.ts  useSoundEffects.ts
frontend/src/lib/: index.ts  utils.ts
frontend/src/pages/: index.ts
frontend/src/pages/app/: DashboardPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  ResetPasswordPage.tsx  SignupPage.tsx
frontend/src/pages/error/: MaintenancePage.tsx  NotFoundPage.tsx  UnauthorizedPage.tsx
frontend/src/pages/marketing/: CaseStudiesPage.tsx  FeaturesPage.tsx  HomePage.tsx  PricingPage.tsx
frontend/src/services/: analytics.service.ts  auth.service.ts  forecast.service.ts  index.ts  upload.service.ts
frontend/src/services/api/: client.ts  endpoints.ts  websocket.ts
frontend/src/store/: authStore.ts  crisis.store.ts  forecastStore.ts  gamification.store.ts  index.ts  market.store.ts  notification.store.ts  ui.store.ts  uiStore.ts
frontend/src/types/: api.ts  forecast.ts  index.ts  user.ts
frontend/src/types/agents/: coordination.ts  donna.ts  harvey.ts
frontend/src/types/api/: forecast.ts  organization.ts  position.ts  user.ts
frontend/src/types/gamification/: achievement.ts  prestige.ts  rank.ts  xp.ts
frontend/src/types/ui/: glassmorphism.ts  sound.ts  theme.ts
frontend/src/types/wings/: bullpen.ts  donnas-desk.ts  harveys-office.ts  library.ts  lobby.ts  situation-room.ts  treasury.ts  vault.ts  war-room.ts
frontend/src/utils/: constants.ts  formatters.ts  index.ts  validation.ts
(+44 files in other folders)
