# ==============================================================================
# AEQUITAS LV-COP BACKEND - PROJECT CONFIGURATION
# ==============================================================================
# pyproject.toml - Modern Python project configuration
# Defines package metadata, build system, and tool configurations
# ==============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aequitas-backend"
version = "1.0.0"
description = "Crisis-resilient intraday liquidity forecasting API"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Aequitas Engineering", email = "engineering@aequitas.ai"},
]
maintainers = [
    {name = "Aequitas Engineering", email = "engineering@aequitas.ai"},
]
keywords = [
    "fintech",
    "liquidity",
    "forecasting",
    "trading",
    "machine-learning",
    "fastapi",
    "hedge-fund",
    "treasury",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://aequitas.ai"
Documentation = "https://docs.aequitas.ai"
Repository = "https://github.com/aequitas/aequitas-mvp"
Changelog = "https://github.com/aequitas/aequitas-mvp/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/aequitas/aequitas-mvp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
ml = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "mlflow>=2.10.0",
]

[project.scripts]
aequitas = "app.main:main"
aequitas-worker = "app.tasks.celery_app:main"

# ==============================================================================
# BLACK - Code Formatter
# ==============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | __pycache__
)/
'''

# ==============================================================================
# ISORT - Import Sorting
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".git",
    ".venv",
    "venv",
    "migrations",
    "__pycache__",
]
known_first_party = ["app"]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "redis",
    "celery",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# ==============================================================================
# MYPY - Static Type Checking
# ==============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "minio.*",
    "mlflow.*",
    "xgboost.*",
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "yfinance.*",
    "fredapi.*",
    "sendgrid.*",
    "stripe.*",
    "prometheus_client.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
strict = false

# ==============================================================================
# RUFF - Fast Python Linter
# ==============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FBT",    # flake8-boolean-trap
    "LOG",    # flake8-logging
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "S101",   # use of assert (for tests)
    "S104",   # possible binding to all interfaces
    "FBT001", # boolean positional arg
    "FBT002", # boolean default arg
]
unfixable = [
    "ERA",    # Don't auto-remove commented code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",   # asserts allowed in tests
    "ARG",    # unused args allowed in tests
    "FBT",    # booleans allowed in tests
    "PLR2004", # magic values allowed in tests
    "S311",   # random allowed in tests
]
"migrations/**/*" = [
    "INP001", # implicit namespace package
]
"scripts/**/*" = [
    "INP001", # implicit namespace package
    "T201",   # print allowed in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 10

# ==============================================================================
# PYTEST - Testing Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
env = [
    "ENVIRONMENT=test",
    "TESTING=1",
]

# ==============================================================================
# COVERAGE - Code Coverage
# ==============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.paths]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================================================
# BANDIT - Security Linting
# ==============================================================================
[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv", "venv"]
skips = ["B101", "B311"]

# ==============================================================================
# COMMITIZEN - Conventional Commits
# ==============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "app/version.py:__version__",
    "pyproject.toml:version",
]
update_changelog_on_bump = true

# ==============================================================================
# PYDANTIC - Model Configuration (for mypy plugin)
# ==============================================================================
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
